--- a/project.private.config.json
+++ b/project.private.config.json
@@ -5,5 +5,17 @@
     "compileHotReLoad": true,
     "urlCheck": false
   },
-  "condition": {}
+  "condition": {
+    "miniprogram": {
+      "list": [
+        {
+          "name": "",
+          "pathName": "pages/music-player/music-player",
+          "query": "id=1974443814",
+          "launchMode": "default",
+          "scene": null
+        }
+      ]
+    }
+  }
 }
